# narrative-scorer

./: CHANGELOG.md  LICENSE  README-differentiation-draft.md  README.md  ROADMAP-v0.6.md  ROADMAP-v0.7.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: llm_config.example.yaml
docs/: academic-pr-drafts.md
examples/: sample_input.txt  sample_output.json
llm_prompts/: causality_detection.txt  emotion_detection.txt  event_segmentation.txt
src/: gradio_ui.py  llm_feature_extractor.py  scorer.py
tests/: test_benchmark.py  test_benchmark_v07.py  test_benchmark_v07_extended.py  test_integration_v07.py  test_llm_feature_extractor.py  test_scorer.py
